@@ -1,5 +1,12 @@
 TheMightyDude (22 July 2012)
 --------------------------------------
+Fixed Notice: Use of undefined constant zone_id - assumed 'zone_id' in admin.php
+Fixed Notice: Use of undefined constant port_type - assumed 'port_type' in admin.php
+Fixed Notice: Use of undefined constant name - assumed 'name' in admin.php
+Fixed some cleanups of '?' to ? (cannot have single quotes around ?)
+
+TheMightyDude (22 July 2012)
+--------------------------------------
 Fixed loads of bugs, too many to write down.
 
 TheKabal (21 July 2012)
